--- a/usecases/example/docker-compose.yml
+++ b/usecases/example/docker-compose.yml
@@ -15,7 +15,7 @@
 # along with this program; if not, write to the Free Software
 # Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
 
-# Date: 2016-09-15
+# Date: 2016-10-08
 
 version: '2'
 
@@ -27,11 +27,11 @@ services:
         - .:/opt/scaledcars.data
         command: "/opt/od4/bin/odsupercomponent --cid=211 --verbose=1 --configuration=/opt/scaledcars.data/configuration"
         
-    # scaledcars-control-example
-    scaledcars-control-example:
+    # opendlv-control-example
+    opendlv-control-example:
         build: .
         network_mode: "host"
         depends_on:
             - odsupercomponent
-        command: "/opt/opendlv.scaledcars/bin/scaledcars-control-example --cid=211 --freq=10"
+        command: "/opt/opendlv/bin/opendlv-control-example --cid=211 --freq=10"
 
