--- a/code/CMakeLists.txt
+++ b/code/CMakeLists.txt
@@ -47,7 +47,7 @@ set(LIBRARIES ${OPENDAVINCI_LIBRARIES})
 
 ###########################################################################
 # Add subfolders with sources.
-#add_subdirectory(perception)
+add_subdirectory(legacy)
 add_subdirectory(control)
 
 ###########################################################################
