--- a/code/legacy/CMakeLists.txt
+++ b/code/legacy/CMakeLists.txt
@@ -19,4 +19,5 @@ project(opendlv-legacy)
 
 add_subdirectory(lanefollower)
 add_subdirectory(simpledriver)
+add_subdirectory(trafficlightdetector)
 
